c4prj2_input/grade.txt
Grading at Wed Oct 14 19:10:13 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘createHandsFromLine’:
input.c:111:7: error: unused variable ‘idx’ [-Werror=unused-variable]
   int idx=0;
       ^
input.c:110:10: error: unused variable ‘idxP’ [-Werror=unused-variable]
   char * idxP=NULL;
          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
